--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "node ./src/bin/www"
   },
+  "devDependencies": {
+    "sequelize-cli": "^6.4.1"
+  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
@@ -18,10 +21,8 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "morgan": "~1.9.1",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
     "sequelize": "^6.17.0"
-  },
-  "devDependencies": {
-    "sequelize-cli": "^6.4.1"
   }
 }
